Nutshell.Hikvision.MachineVision/MvCameraControl.h

MV_CAMCTRL_API int __stdcall MV_CC_EnumDevices(IN unsigned int nTLayerType, IN OUT MV_CC_DEVICE_INFO_LIST* pstDevList);
MV_CAMCTRL_API int __stdcall MV_CC_CreateHandle(OUT void ** handle, IN const MV_CC_DEVICE_INFO* pstDevInfo);
MV_CAMCTRL_API int __stdcall MV_CC_DestroyHandle(IN void * handle);
// 暂不支持
MV_CAMCTRL_API bool __stdcall MV_CC_IsDeviceAccessible(IN void * handle, IN MV_CC_DEVICE_INFO* pstDevInfo, IN unsigned int nAccessMode);
MV_CAMCTRL_API int __stdcall MV_CC_OpenDevice(IN void* handle,
                                              IN unsigned int nAccessMode = MV_ACCESS_Exclusive, 
                                              IN unsigned short nSwitchoverKey = 0);
MV_CAMCTRL_API int __stdcall MV_CC_CloseDevice(IN void* handle);
// 注册图像数据回调，暂不支持
MV_CAMCTRL_API int __stdcall MV_CC_RegisterImageCallBack(void* handle, 
                                                         void(__stdcall* cbOutput)(unsigned char * pData, MV_FRAME_OUT_INFO* pFrameInfo, void* pUser),
                                                         void* pUser);
MV_CAMCTRL_API int __stdcall MV_CC_StartGrabbing(IN void* handle);
MV_CAMCTRL_API int __stdcall MV_CC_StopGrabbing(IN void* handle);
MV_CAMCTRL_API int __stdcall MV_CC_GetOneFrame(IN void* handle, IN OUT unsigned char * pData , IN unsigned int nDataSize, IN OUT MV_FRAME_OUT_INFO* pFrameInfo);
// 有节点需要更新时的回调函数
MV_CAMCTRL_API int __stdcall MV_XML_RegisterUpdateCallBack(IN void* handle, 
                                                           IN void(__stdcall* cbUpdate)(MV_XML_InterfaceType enType, void* pstFeature, MV_XML_NODES_LIST* pstNodesList, void* pUser),
                                                           IN void* pUser);
MV_CAMCTRL_API int __stdcall MV_CC_ReadMemory(IN void* handle , void *pBuffer, __int64 nAddress, __int64 nLength);
MV_CAMCTRL_API int __stdcall MV_CC_WriteMemory(IN void* handle , const void *pBuffer, __int64 nAddress, __int64 nLength);
// 注册异常消息回调
MV_CAMCTRL_API int __stdcall MV_CC_RegisterExceptionCallBack(IN void* handle, 
                                                             void(__stdcall* cbException)(unsigned int nMsgType, void* pUser),
                                                             void* pUser);